concord_macros/tests/dsl/fail/fail_behavior_empty_list_scope.rs
use concord_macros::api;

api! {
    client EmptyBehaviorListScopeApi {
        base "https://example.com"
    }

    scope users {
        path ["users"]
        behavior []
    }
}

fn main() {}
